# PopCave

./: .gitignore  .gitmodules  Colour.frag.glsl  Geo.vert.glsl  Readme.txt  bootup.js
AutoBuild/: bootup.js
FlowEmulator/: bootup.js
PopCave/: CameraTest.js  Colour.frag.glsl  Edge.frag.glsl  ProjectionTest.js  Tracking.js  bootup.js
PopCave.Android/: local.properties
PopCave.Android/app/: build.gradle
PopCave.Android/app/src/main/cpp/: CMakeLists.txt  main.cpp
PopCave.Android/gradle/wrapper/: gradle-wrapper.properties
PopCave.visualstudio/PopCave/: PopCave.cpp  PopCave.rc  PopCave.sln  PopCave.vcxproj  PopCave.vcxproj.filters
PopCave.xcodeproj/: project.pbxproj
PopCave.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PopCave.xcodeproj/xcshareddata/xcschemes/: PopCave.xcscheme
PopCave_Ios/: Info_Ios.plist
PopCave_Ios/Base.lproj/: Main.storyboard
Source/: Main.cpp
Src_Osx/: Info.plist  main.mm
Src_Windows/: PopCave.cpp  PopCave.rc  PopCoreml.manifest
